--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":" https://morning-river-30141.herokuapp.com"
 }
